<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity">

    <TextView
        android:id="@+id/tv_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_12sdp"
        android:gravity="center"
        android:text="@string/str_skip"
        android:textColor="@color/blue"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- App Logo -->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/app_logo"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_centerInParent="true"
        android:src="@drawable/app_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18" />

    <!-- App Title -->
    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:gravity="center"
        android:fontFamily="@font/noto_nastaliq_urdu_medium"
        android:text="@string/str_splash_title"
        android:textColor="@color/black"
        android:textSize="@dimen/_8ssp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo" />

    <View
        android:id="@+id/view"
        android:layout_width="@dimen/_16sdp"
        android:layout_height="@dimen/_2sdp"
        android:layout_marginEnd="@dimen/_4sdp"
        android:background="#7DF081"
        app:layout_constraintBottom_toBottomOf="@id/app_title"
        app:layout_constraintEnd_toStartOf="@id/app_title"
        app:layout_constraintTop_toTopOf="@id/app_title" />

    <View
        android:layout_width="@dimen/_16sdp"
        android:layout_height="@dimen/_2sdp"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_4sdp"
        android:background="#7DF081"
        app:layout_constraintBottom_toBottomOf="@id/app_title"
        app:layout_constraintStart_toEndOf="@+id/app_title"
        app:layout_constraintTop_toTopOf="@id/app_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/str_register"
        android:backgroundTint="@color/blue"
        app:cornerRadius="@dimen/_6sdp"
        android:fontFamily="@font/noto_nastaliq_urdu_medium"
        android:textSize="@dimen/_12ssp"
        android:layout_marginTop="@dimen/_62sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_title"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/str_login"
        android:backgroundTint="#F2F1F1"
        app:cornerRadius="@dimen/_6sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        android:fontFamily="@font/noto_nastaliq_urdu_medium"
        android:layout_marginTop="@dimen/_22sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_register"/>



</androidx.constraintlayout.widget.ConstraintLayout>