<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.InformationActivity">

    <!-- App Logo -->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/app_logo"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_centerInParent="true"
        android:src="@drawable/app_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:breakStrategy="simple"
        android:fontFamily="@font/noto_nastaliq_urdu_medium"
        android:gravity="center"
        android:text="@string/str_please_provide_info"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner_province"
        style="@style/Spinner"
        android:layout_width="0dp"
        android:layout_height="?attr/dropdownListPreferredItemHeight"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_28sdp"
        android:background="@drawable/bg_spinner_gray_border"
        android:entries="@array/select_province"
        android:textDirection="rtl"
        android:layoutDirection="rtl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner_district"
        style="@style/Spinner"
        android:layout_width="0dp"
        android:layout_height="?attr/dropdownListPreferredItemHeight"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/bg_spinner_gray_border"
        android:entries="@array/select_district"
        android:textDirection="rtl"
        android:layoutDirection="rtl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_province" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/bg_edittext"
        android:drawableEnd="@drawable/ic_gender"
        android:drawablePadding="@dimen/_8sdp"
        android:hint="@string/str_gender"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textDirection="rtl"
        android:padding="@dimen/_6sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_district" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_date_of_brth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/bg_edittext"
        android:drawableEnd="@drawable/ic_calende"
        android:drawablePadding="@dimen/_8sdp"
        android:hint="@string/str_dob"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textDirection="rtl"
        android:padding="@dimen/_6sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_gender" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_complete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_14sdp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/noto_nastaliq_urdu_regular"
        android:text="@string/str_complete"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/btn_cancel"
        android:textSize="@dimen/_12ssp"
        android:background="@drawable/bg_button"
        app:cornerRadius="@dimen/_6sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_date_of_brth" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_14sdp"
        android:fontFamily="@font/noto_nastaliq_urdu_regular"
        android:text="@string/str_cancel"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        android:backgroundTint="@color/white"
        android:background="@drawable/bg_button"
        app:cornerRadius="@dimen/_6sdp"
        app:layout_constraintEnd_toStartOf="@+id/btn_complete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_date_of_brth" />

    <View
        android:id="@+id/view"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_4sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:background="@drawable/bg_edittext"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>